# Customer-Support-System

./: README.md  pyproject.toml  requirements.txt
app/api/: main.py
app/core/: config.py
app/rag/: chunker.py  embeddings.py  engine.py  loader.py  vectorstore.py
docker/: Dockerfile
