[project]
name = "customer-support-system"
version = "0.1.0"
description = "FastAPI Customer Support System"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pypdf",
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "sentence-transformers",
    "faiss-cpu",
    "langchain_huggingface",
    "langchain_google_genai"
]

[tool.vercel]
entrypoint = "app.api.main:app"